@@ -77,6 +77,11 @@ DISTCLEANFILES = asconfig.texi
 
 MAINTAINERCLEANFILES = gasver.texi
 
+BASEDIR = $(srcdir)/../..
+BFDDIR = $(BASEDIR)/bfd
+
+CONFIG_STATUS_DEPENDENCIES = $(BFDDIR)/configure.in
+
 # Maintenance
 
 # We need it for the taz target in ../../Makefile.in.
